Added infrastracture to support section, layout and include pages for razor Updated licenses on files

--- a/Node.Cs/src/modules/Http.Mvc/Http.Mvc.csproj
+++ b/Node.Cs/src/modules/Http.Mvc/Http.Mvc.csproj
@@ -42,11 +42,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="CoroutinesLib">
-      <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha\lib\net45\CoroutinesLib.dll</HintPath>
+      <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="CoroutinesLib.Shared">
-      <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha\lib\net45\CoroutinesLib.Shared.dll</HintPath>
+      <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.Shared.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ExpressionBuilder, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
