--- a/Node.Cs/src/modules/Log4Net/Log4Net.csproj
+++ b/Node.Cs/src/modules/Log4Net/Log4Net.csproj
@@ -36,10 +36,12 @@
       <HintPath>..\..\..\packages\ConcurrencyHelpers.4.0.0-alpha\lib\net45\ConcurrencyHelpers.dll</HintPath>
     </Reference>
     <Reference Include="CoroutinesLib">
-      <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha\lib\net45\CoroutinesLib.dll</HintPath>
+      <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="CoroutinesLib.Shared">
-      <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha\lib\net45\CoroutinesLib.Shared.dll</HintPath>
+      <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.Shared.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
