--- a/Node.Cs/samples/IntranetWebApplicationNode/IntranetWebApplicationNode.csproj
+++ b/Node.Cs/samples/IntranetWebApplicationNode/IntranetWebApplicationNode.csproj
@@ -37,11 +37,12 @@
       <HintPath>..\..\packages\ConcurrencyHelpers.4.0.0-alpha\lib\net45\ConcurrencyHelpers.dll</HintPath>
     </Reference>
     <Reference Include="CoroutinesLib">
-      <HintPath>..\..\packages\CoroutinesLib.4.0.0-alpha\lib\net45\CoroutinesLib.dll</HintPath>
+      <HintPath>..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="CoroutinesLib.Shared, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\CoroutinesLib.4.0.0-alpha\lib\net45\CoroutinesLib.Shared.dll</HintPath>
+    <Reference Include="CoroutinesLib.Shared">
+      <HintPath>..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.Shared.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DotNetOpenAuth.AspNet, Version=4.3.0.0, Culture=neutral, PublicKeyToken=2780ccd10d57b246, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
