--- a/Node.Cs/samples/IntranetWebApplicationNode/packages.config
+++ b/Node.Cs/samples/IntranetWebApplicationNode/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ConcurrencyHelpers" version="4.0.0-alpha" targetFramework="net45" />
-  <package id="CoroutinesLib" version="4.0.0-alpha" targetFramework="net45" />
+  <package id="CoroutinesLib" version="4.0.0-alpha-1" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.3.4.13329" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.3.4.13329" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.4.13329" targetFramework="net45" />
