--- a/Node.Cs/samples/TestWebServerNode/TestWebServerNode.csproj
+++ b/Node.Cs/samples/TestWebServerNode/TestWebServerNode.csproj
@@ -63,11 +63,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="CoroutinesLib">
-      <HintPath>..\..\packages\CoroutinesLib.4.0.0-alpha\lib\net45\CoroutinesLib.dll</HintPath>
+      <HintPath>..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="CoroutinesLib.Shared">
-      <HintPath>..\..\packages\CoroutinesLib.4.0.0-alpha\lib\net45\CoroutinesLib.Shared.dll</HintPath>
+      <HintPath>..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.Shared.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
