--- a/Node.Cs/samples/TestWebServerNode/packages.config
+++ b/Node.Cs/samples/TestWebServerNode/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ConcurrencyHelpers" version="4.0.0-alpha" targetFramework="net45" />
-  <package id="CoroutinesLib" version="4.0.0-alpha" targetFramework="net45" />
+  <package id="CoroutinesLib" version="4.0.0-alpha-1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
