--- a/Node.Cs/src/modules/ConsoleLogger/packages.config
+++ b/Node.Cs/src/modules/ConsoleLogger/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="ClassWrapper" version="2.1.1" targetFramework="net45" />
   <package id="ConcurrencyHelpers" version="4.0.0-alpha" targetFramework="net45" />
-  <package id="CoroutinesLib" version="4.0.0-alpha" targetFramework="net45" />
+  <package id="CoroutinesLib" version="4.0.0-alpha-1" targetFramework="net45" />
   <package id="ExpressionBuilder" version="2.1.1" targetFramework="net45" />
 </packages>
