--- a/Node.Cs/src/modules/Http.Mvc/packages.config
+++ b/Node.Cs/src/modules/Http.Mvc/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="ClassWrapper" version="2.1.1" targetFramework="net45" requireReinstallation="True" />
   <package id="ConcurrencyHelpers" version="4.0.0-alpha" targetFramework="net45" />
-  <package id="CoroutinesLib" version="4.0.0-alpha" targetFramework="net45" />
+  <package id="CoroutinesLib" version="4.0.0-alpha-1" targetFramework="net45" />
   <package id="ExpressionBuilder" version="2.1.1" targetFramework="net45" />
   <package id="GenericHelpers" version="1.0.5" targetFramework="net45" requireReinstallation="True" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
