--- a/Node.Cs/src/nodecs/Node.Cs/packages.config
+++ b/Node.Cs/src/nodecs/Node.Cs/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ConcurrencyHelpers" version="4.0.0-alpha" targetFramework="net45" />
-  <package id="CoroutinesLib" version="4.0.0-alpha" targetFramework="net45" />
+  <package id="CoroutinesLib" version="4.0.0-alpha-1" targetFramework="net45" />
   <package id="GenericHelpers" version="1.0.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="SharpTemplate" version="1.0.1" targetFramework="net45" />
