--- a/Node.Cs/test/modules/Http.IntegrationTest/Http.IntegrationTest.csproj
+++ b/Node.Cs/test/modules/Http.IntegrationTest/Http.IntegrationTest.csproj
@@ -49,8 +49,9 @@
       <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.Shared.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="CoroutinesLib.TestHelpers">
-      <HintPath>..\..\..\packages\CoroutinesLib.TestHelpers.4.0.0-alpha\lib\net45\CoroutinesLib.TestHelpers.dll</HintPath>
+    <Reference Include="CoroutinesLib.TestHelpers, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\CoroutinesLib.TestHelpers.4.0.0-alpha-1\lib\net45\CoroutinesLib.TestHelpers.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\..\..\packages\HtmlAgilityPack.1.4.9\lib\net45\HtmlAgilityPack.dll</HintPath>
