--- a/Node.Cs/test/modules/Http.IntegrationTest/packages.config
+++ b/Node.Cs/test/modules/Http.IntegrationTest/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="ConcurrencyHelpers" version="4.0.0-alpha" targetFramework="net45" />
   <package id="CoroutinesLib" version="4.0.0-alpha-1" targetFramework="net45" />
-  <package id="CoroutinesLib.TestHelpers" version="4.0.0-alpha" targetFramework="net45" />
+  <package id="CoroutinesLib.TestHelpers" version="4.0.0-alpha-1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
 </packages>
