--- a/Node.Cs/test/modules/Http.Renderer.Razor.Test/Http.Renderer.Razor.Test.csproj
+++ b/Node.Cs/test/modules/Http.Renderer.Razor.Test/Http.Renderer.Razor.Test.csproj
@@ -44,6 +44,9 @@
       <HintPath>..\..\..\packages\CoroutinesLib.4.0.0-alpha-1\lib\net45\CoroutinesLib.Shared.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="CoroutinesLib.TestHelpers">
+      <HintPath>..\..\..\packages\CoroutinesLib.TestHelpers.4.0.0-alpha-1\lib\net45\CoroutinesLib.TestHelpers.dll</HintPath>
+    </Reference>
     <Reference Include="GenericHelpers">
       <HintPath>..\..\..\packages\GenericHelpers.1.0.5\lib\net45\GenericHelpers.dll</HintPath>
     </Reference>
@@ -81,9 +84,17 @@
       <Project>{308123AA-03D4-4058-84B4-E8CF5D721D16}</Project>
       <Name>Http.Shared</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\src\modules\Http\Http.csproj">
+      <Project>{CE8AD0CB-A416-4BFC-B998-AE6F33669590}</Project>
+      <Name>Http</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\src\nodecs\Node.Cs.Shared\Node.Cs.Shared.csproj">
       <Project>{84F88FD9-F8F6-4741-BDDD-D62772E77523}</Project>
       <Name>Node.Cs.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\utils\Node.Cs.TestHelpers\Node.Cs.TestHelpers.csproj">
+      <Project>{44719B64-DAEB-44FD-91E7-CE7ADB43A605}</Project>
+      <Name>Node.Cs.TestHelpers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +114,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <EmbeddedResource Include="Resources\section.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\renderPage.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\renderPageSub.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <None Include="web.config" />
   </ItemGroup>
   <ItemGroup>
