--- a/Node.Cs/test/modules/Http.Renderer.Razor.Test/packages.config
+++ b/Node.Cs/test/modules/Http.Renderer.Razor.Test/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ConcurrencyHelpers" version="4.0.0-alpha" targetFramework="net45" />
   <package id="CoroutinesLib" version="4.0.0-alpha-1" targetFramework="net45" />
+  <package id="CoroutinesLib.TestHelpers" version="4.0.0-alpha-1" targetFramework="net45" />
   <package id="GenericHelpers" version="1.0.5" targetFramework="net45" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
 </packages>
